// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Basic 1`] = `
<div class="n22-example-child n22-example-child-single-component">
  <p>当前值：1000</p>
  <div class="container">
    <div class="n22-ruler"><canvas class="n22-ruler-canvas"></canvas>
      <div class="n22-ruler-cursor"></div>
      <div class="n22-ruler-arrow"></div>
    </div>
  </div>
</div>
`;

exports[`Radio List 1`] = `
<div class="n22-example-child n22-example-child-single-component">
  <p>当前值：1300</p>
  <div class="container">
    <div class="n22-ruler"><canvas class="n22-ruler-canvas"></canvas>
      <div class="n22-ruler-cursor"></div>
      <div class="n22-ruler-arrow"></div>
    </div>
  </div>
</div>
`;

exports[`Radio With Field 1`] = `
<div class="n22-example-child n22-example-child-single-component">
  <p>当前值：1305</p>
  <div class="container">
    <div class="n22-ruler"><canvas class="n22-ruler-canvas"></canvas>
      <div class="n22-ruler-cursor"></div>
      <div class="n22-ruler-arrow"></div>
    </div>
  </div>
</div>
`;
